refactor(user): update user information retrieval to use UserDTO and improve method documentation